# ZhuShou

./: .gitignore  README.md  README_CN.md  pyproject.toml  upload_pypi.bat  upload_pypi.sh
api/docs/: architecture.md  requirements.md
api/flask_api/: __init__.py  api.py  cli.py  core.py  tools.py
api/tests/: conftest.py
images/: zhushou_help.txt
old/: display.py  ollama_client.py  pipeline.py  quest.py  requirements.txt  stages.py  tools.py  xml_parser.py
output/: board.py  coin_placer.py  full_board_checker.py  game_state_manager.py  score_tracker.py  ui.py  win_checker.py
scripts/: generate_help_screenshots.py
tests/: conftest.py  test_llm_enhancer.py  test_unified_api.py
zhushou/: __init__.py  __main__.py  api.py  api_daemon.py  cli.py  tools.py
zhushou/agent/: __init__.py  context.py  conversation.py  loop.py
zhushou/config/: __init__.py  manager.py  wizard.py
zhushou/display/: __init__.py  console.py  dashboard.py
zhushou/events/: __init__.py  bus.py  types.py
zhushou/executor/: __init__.py  builtin_tools.py  sibling_tools.py  tool_executor.py
zhushou/git/: __init__.py  manager.py
zhushou/gui/: __init__.py  app.py  code_panel.py  main_window.py  pipeline_view.py  stage_sidebar.py  styles.py  thinking_panel.py  wizard_dialog.py  workers.py
zhushou/knowledge/: __init__.py  cheatsheets.py  doc_manager.py  doc_sources.py  indexer.py  kb_config.py  kb_manager.py  retriever.py
zhushou/llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  model_registry.py  ollama_client.py  openai_client.py
zhushou/llm_enhancer/: BENCHMARK_REPORT.md  README.md  __init__.py  advanced_strategies.py  benchmarks.py  benchmarks.py.bak  cli.py  comparison.py  critique.py  enhancer.py  interactive_test.py  prompts.py  voting.py
zhushou/logging/: __init__.py  rotating.py
zhushou/memory/: __init__.py  conversation_log.py  persistent.py  vector_store.py
zhushou/orchestrator/: __init__.py  loop.py  retry.py  snapshot.py  state.py
zhushou/persona/: __init__.py  loader.py
zhushou/pipeline/: __init__.py  function_design.py  orchestrator.py  runner.py  stages.py
zhushou/templates/: __init__.py.tpl  api.py.tpl  cli.py.tpl  conftest.py.tpl  tools.py.tpl
zhushou/tracker/: __init__.py  base.py  github_issues.py  local_yaml.py  memory.py  task.py
zhushou/tracking/: __init__.py  tracker.py
zhushou/utils/: __init__.py  constants.py  python_finder.py  world_context.py
zhushou/web/: __init__.py  app.py  bridge.py  routes.py
zhushou/web/static/: app.js  index.html  style.css
zhushou/workflow/: __init__.py  config.py  parser.py  prompt_builder.py  store.py
zhushou/workspace/: __init__.py  hooks.py  manager.py
