[build-system]
requires = ["setuptools>=61.0,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "zhushou"
dynamic = ["version"]
description = "AI-powered development assistant with multi-model support, desktop GUI, web interface, autonomous coding pipeline, and orchestration daemon"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "cycleuser"}]
keywords = [
    "ai", "assistant", "llm", "agent", "coding",
    "openai", "anthropic", "ollama", "development",
    "orchestrator", "workflow", "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "modelsensor>=1.1.0",
    "huan>=0.2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "watchdog>=3.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.4.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
gemini = ["google-generativeai>=0.3"]
all = [
    "chromadb>=0.4.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "google-generativeai>=0.3",
    "PySide6>=6.5",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
gui = ["PySide6>=6.5"]
web = ["fastapi>=0.100", "uvicorn>=0.23", "python-multipart>=0.0.6"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
zhushou = "zhushou.cli:main"

[project.urls]
Homepage = "https://github.com/cycleuser/ZhuShou"
Repository = "https://github.com/cycleuser/ZhuShou"
Issues = "https://github.com/cycleuser/ZhuShou/issues"

[tool.setuptools.dynamic]
version = {attr = "zhushou.__version__"}

[tool.setuptools.packages.find]
include = ["zhushou*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
